--- a/musket_docs/site/classification/index.html
+++ b/musket_docs/site/classification/index.html
@@ -1064,7 +1064,8 @@
               
                 <h1 id="classification-training-pipeline">Classification training pipeline</h1>
 <p>Classification pipeline is a declarative pipeline for single and multi output image classification tasks.
-It can be also used for regression tasks</p>
+It can be also used for regression tasks.</p>
+<p>This package is a part of <a href="https://musket-ml.com/">Musket ML</a> framework.</p>
 <h2 id="reasons-to-use-classification-pipeline">Reasons to use Classification Pipeline</h2>
 <p>Classification Pipeline was developed with a focus of enabling to make fast and 
 simply-declared experiments, which can be easily stored, 
