--- a/musket_docs/site/index.html
+++ b/musket_docs/site/index.html
@@ -1059,7 +1059,6 @@
             <div class="section">
               
                 <h1 id="you-have-just-found-musket">You have just found Musket</h1>
-<p><img alt="Build status" src="https://api.travis-ci.com/musket-ml/musket_core.svg?branch=master" /></p>
 <p>Musket is a family of high-level frameworks written in Python and capable of running on top of <a href="https://keras.io/">Keras</a>.</p>
 <p>It was developed with a focus of enabling to make fast and simply-declared experiments, which can be easily stored, reproduced and compared to each other.</p>
 <p>Use Musket if you need a deep learning framework that:</p>
@@ -1069,6 +1068,8 @@
 <li>Easy to share experiments and their results to work in a team</li>
 <li>Provides IDE and visual tooling to make experimentation faster</li>
 </ul>
+<p>There are some videos to check <a href="https://www.youtube.com/playlist?list=PLyV40LHl22j5VOv2DgHoNDkpxkfueIQmn">here</a>.</p>
+<p>Main framework website: <a href="https://musket-ml.com/">musket-ml.com</a></p>
 <h1 id="goals-and-principles">Goals and principles</h1>
 <h3 id="compactness-and-declarative-description">Compactness and declarative description</h3>
 <p>Declarative description is always more compact and human-readable
@@ -1327,5 +1328,5 @@ stages:
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2019-11-16 14:24:37
+Build Date UTC : 2019-11-18 03:44:06
 -->
