--- a/musket_docs/site/segmentation/index.html
+++ b/musket_docs/site/segmentation/index.html
@@ -1063,6 +1063,7 @@
             <div class="section">
               
                 <h1 id="segmentation-training-pipeline">Segmentation Training Pipeline</h1>
+<p>This package is a part of <a href="https://musket-ml.com/">Musket ML</a> framework.</p>
 <h2 id="reasons-to-use-segmentation-pipeline">Reasons to use Segmentation Pipeline</h2>
 <p>Segmentation Pipeline was developed with a focus of enabling to make fast and 
 simply-declared experiments, which can be easily stored, 
